--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fontsource/roboto": "^5.0.5",
     "@icewhale/casaos-appmanagement-openapi": "latest",
     "@icewhale/casaos-openapi": "latest",
-    "@icewhale/icewhale-files-openapi": "latest",
+    "@icewhale/icewhale-files-openapi": "npm:@yundera/icewhale-files-openapi@1.3.0-alpha133",
     "@kangc/v-md-editor": "^1.7.11",
     "@mdi/font": "^6.9.96",
     "@tiptap/core": "^2.0.4",
